--- a/src/assets/css/home-page.css
+++ b/src/assets/css/home-page.css
@@ -1011,7 +1011,7 @@
 
 .blog-text>p {
     position: relative;
-    z-index: 9999
+    z-index: 9998
 }
 
 .blog-link>a {
